--- a/style.css
+++ b/style.css
@@ -1,29 +1,3 @@
-@media (max-width: 5000px) {
-  .card {
-    width: 600px;
-  }
-}
-
-@media (max-width: 960px) {
-  /* For a screen < 960px, this CSS will be read */
-  .card {
-    width: 500px;
-  }
-}
-@media (max-width: 720px) {
-  /* For a screen < 720px, this CSS will be read */
-  .card {
-    width: 400px;
-  }
-}
-@media (max-width: 540px) {
-  /* For a screen < 540px, this CSS will be read */
-  .card {
-    width: 300px;
-  }
-}
-
-
 
 body{
   background-color: #184d47;
@@ -48,7 +22,7 @@ ul > li > a {
 }
 
 ul > li > a:hover {
-  color: black;
+  color: #fe91ca;
 }
 
 a {
@@ -57,13 +31,16 @@ a {
 }
 
 
-
 #btn-contact {
-  background-color: #96bb7c;
+  background-color: #184d47;
   color: white;
   padding: 10px;
   border-radius: 3px;
   margin: 10px;
+}
+
+#btn-contact:hover{
+  color: #fe91ca;
 }
 
 .container {
@@ -77,6 +54,7 @@ a {
   margin: 50px auto;
   border-radius: 5px;
   padding-top: 25px;
+  box-shadow: 5px 10px #fa26a0;
 }
 
 .img-round {
@@ -92,6 +70,32 @@ a {
   display: inline-block;
   padding: 0px 20px;
   font-size: 50px;
+}
+
+
+@media (max-width: 5000px) {
+  .card {
+    width: 600px;
+  }
+}
+
+@media (max-width: 960px) {
+  /* For a screen < 960px, this CSS will be read */
+  .card {
+    width: 500px;
+  }
+}
+@media (max-width: 720px) {
+  /* For a screen < 720px, this CSS will be read */
+  .card {
+    width: 400px;
+  }
+}
+@media (max-width: 540px) {
+  /* For a screen < 540px, this CSS will be read */
+  .card {
+    width: 300px;
+  }
 }
 
 /*Test*/
